<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:layout_marginHorizontal="16dp">

    <androidx.cardview.widget.CardView
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:elevation="12dp"
        android:id="@+id/image_of_me_icon"
        app:cardCornerRadius="80dp"
        android:innerRadius="0dp"
        android:thicknessRatio="1.9"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
        <ImageView
            android:id="@+id/image_of_me"
            android:layout_width="190dp"
            android:layout_height="270dp"
            android:src="@drawable/me"
            android:contentDescription="@string/image_of_myself"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="-40dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent
    "       app:layout_constraintRight_toRightOf="parent"/>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ng_joe_cin"
        android:textSize="23sp"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/image_of_me_icon"/>

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="12dp"
        android:id="@+id/email_icon"
        app:cardCornerRadius="40dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:id="@+id/imageView1"
            android:src="@drawable/email_icon"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="13sp"
        android:fontFamily="serif"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toRightOf="@id/email_icon"
        app:layout_constraintTop_toBottomOf="@id/name"/>

    <TextView
        android:id="@+id/my_email"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/_102765534_students_swinburne_edu_my"
        android:textSize="16sp"
        android:fontFamily="serif"
        android:lineHeight="20dp"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toRightOf="@id/email_icon"
        app:layout_constraintTop_toBottomOf="@id/email"/>

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="12dp"
        android:id="@+id/course_icon"
        app:cardCornerRadius="40dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/email_icon"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:id="@+id/course_icon_"
            android:src="@drawable/course_icon"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/course"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/course"
        android:textSize="13sp"
        android:fontFamily="serif"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toRightOf="@id/course_icon"
        app:layout_constraintTop_toBottomOf="@id/email"/>

    <TextView
        android:id="@+id/my_course"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/bachelor_of_computer_science"
        android:textSize="16sp"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toRightOf="@id/course_icon"
        app:layout_constraintTop_toBottomOf="@id/course"/>

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="12dp"
        android:id="@+id/school_icon"
        app:cardCornerRadius="40dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/course_icon"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:id="@+id/school_icon_"
            android:src="@drawable/school_icon"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/school"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/school"
        android:textSize="13sp"
        android:fontFamily="serif"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toRightOf="@id/school_icon"
        app:layout_constraintTop_toBottomOf="@id/course"/>

    <TextView
        android:id="@+id/my_school"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:text="@string/my_school"
        android:textSize="16sp"
        android:lineHeight="20dp"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="4dp"
        app:layout_constraintLeft_toRightOf="@id/school_icon"
        app:layout_constraintTop_toBottomOf="@id/school"/>

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="12dp"
        android:id="@+id/location_icon"
        app:cardCornerRadius="40dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/school_icon"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:layout_height="30dp"
            android:layout_width="30dp"
            android:id="@+id/location_icon_"
            android:src="@drawable/location_icon"
            android:layout_marginTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:textSize="13sp"
        android:fontFamily="serif"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="60dp"
        app:layout_constraintLeft_toRightOf="@id/location_icon"
        app:layout_constraintTop_toBottomOf="@id/school"/>

    <TextView
        android:id="@+id/my_location"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/kuching_sarawak"
        android:textSize="16sp"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="2dp"
        app:layout_constraintLeft_toRightOf="@id/location_icon"
        app:layout_constraintTop_toBottomOf="@id/location"/>

    <androidx.cardview.widget.CardView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:elevation="12dp"
        android:id="@+id/interest_icon"
        app:cardCornerRadius="40dp"
        android:layout_centerHorizontal="true"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/location_icon"
        app:layout_constraintLeft_toLeftOf="parent">
        <ImageView
            android:layout_height="40dp"
            android:layout_width="40dp"
            android:id="@+id/interest_icon_"
            android:src="@drawable/interests_icon"
            android:layout_marginTop="5dp"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_horizontal">
        </ImageView>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/interests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interests"
        android:textSize="13sp"
        android:fontFamily="serif"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="50dp"
        app:layout_constraintLeft_toRightOf="@id/interest_icon"
        app:layout_constraintTop_toBottomOf="@id/location"/>

    <TextView
        android:id="@+id/my_interests"
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:text="@string/my_interests"
        android:textSize="16sp"
        android:lineHeight="20dp"
        android:fontFamily="serif"
        android:textColor="@color/black"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="2dp"
        app:layout_constraintLeft_toRightOf="@id/interest_icon"
        app:layout_constraintTop_toBottomOf="@id/interests"/>


</androidx.constraintlayout.widget.ConstraintLayout>